refactor: update pokemon page image source

--- a/src/app/components/pokemon/pokemon-page/pokemon-page.component.html
+++ b/src/app/components/pokemon/pokemon-page/pokemon-page.component.html
@@ -15,7 +15,7 @@
     <section class="top_section">
       <section class="img_section">
         <article>
-          <img [src]="pokemonImgSrc" [alt]="pokemon.name" />
+          <img [src]="pokemon.sprites.other['official-artwork'].front_default" [alt]="pokemon.name" />
         </article>
       </section>
       <section>
