feat: add abilities components

--- a/src/app/components/pokemon/pokemon-page/pokemon-page.component.html
+++ b/src/app/components/pokemon/pokemon-page/pokemon-page.component.html
@@ -66,29 +66,7 @@
       </section>
     </section>
 
-    <section class="abilities_moves_section">
-      <article class="abilities">
-        <h2>Talents</h2>
-        <ul>
-          @for (ability of pokemon.abilities; track $index) {
-            <li>
-              {{ ability.ability.name | titlecase }}
-              @if (ability.is_hidden) {
-                <span>(caché)</span>
-              }
-            </li>
-          }
-        </ul>
-      </article>
-      <article class="moves">
-        <h2>Capacités</h2>
-        <ul>
-          @for (move of pokemon.moves; track $index) {
-            <li>{{ move.move.name.replace("-", " ") | titlecase }}</li>
-          }
-        </ul>
-      </article>
-    </section>
+    <app-pokemon-abilities [pokemon]="pokemon"></app-pokemon-abilities>
 
     <section>
       <app-evolution-chain [pokemonName]="pokemon.name"></app-evolution-chain>
